--- a/Validaciones/estilo.css
+++ b/Validaciones/estilo.css
@@ -1,11 +1,11 @@
 body {
-	background: rgb(125,185,232); /* Old browsers */
-	background: -moz-linear-gradient(top,  rgba(125,185,232,1) 71%, rgba(125,185,232,1) 99%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(71%,rgba(125,185,232,1)), color-stop(99%,rgba(125,185,232,1))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  rgba(125,185,232,1) 71%,rgba(125,185,232,1) 99%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  rgba(125,185,232,1) 71%,rgba(125,185,232,1) 99%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  rgba(125,185,232,1) 71%,rgba(125,185,232,1) 99%); /* IE10+ */
-	background: linear-gradient(to bottom,  rgba(125,185,232,1) 71%,rgba(125,185,232,1) 99%); /* W3C */
+	background: rgb(105, 33, 42); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(105, 33, 42) 71%, rgba(105, 33, 42) 99%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(71%,rgba(105, 33, 42)), color-stop(99%,rgba(105, 33, 42))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(105, 33, 42) 71%,rgba(105, 33, 42) 99%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgb(105, 33, 42) 71%,rgba(105, 33, 42) 99%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(105, 33, 42) 71%,rgba(105, 33, 42) 99%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(105, 33, 42) 71%,rgba(105, 33, 42) 99%); /* W3C */
 
 
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7db9e8', endColorstr='#7db9e8',GradientType=0 ); /* IE6-9 */
@@ -16,7 +16,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7db9e8', end
 	
 }
 h2 {
-	color:#000
+	color:rgb(46, 9, 18)
     font-family: Verdana, Geneva, sans-serif;
 	font-size: 22px;
 	margin: 15px;
@@ -24,20 +24,20 @@ h2 {
 	
 }
 .group {
-	border: 3px solid #999999;
+	border: 3px solid #665c5c;
 	padding: 20px;
 	width: 400px;
 	color: #006;
 	border-radius: 8px;
-	border-color:#0000FF;
+	border-color:rgb(27, 27, 83);
 	
-	background: rgb(255,255,255); /* Old browsers */
-	background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(209,238,255,1) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(209,238,255,1))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(209,238,255,1) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(209,238,255,1) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(209,238,255,1) 100%); /* IE10+ */
-	background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(209,238,255,1) 100%); /* W3C */
+	background: rgb(122, 89, 89); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(122, 89, 89) 0%, rgba(122, 89, 89) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(122, 89, 89)), color-stop(100%,rgba(122, 89, 89))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(122, 89, 89) 0%,rgba(122, 89, 89) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(122, 89, 89) 0%,rgba(122, 89, 89) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(122, 89, 89) 0%,rgba(122, 89, 89) 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(122, 89, 89) 0%,rgba(122, 89, 89) 100%); /* W3C */
 
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#d1eeff',GradientType=0 ); /* IE6-9 */
 	margin-top: 0;
@@ -103,8 +103,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 
 label {
 	margin-bottom: 8px;
-	display: block;
-	width: 300px;
+    display: block;
+    width: 300px;
 	font-size: 14px;
 	font-weight: bold;
 }
